--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,4 +18,4 @@ build-and-deploy:
     - yarn build
     - ls -al build/
     - apt-get update -qq && apt-get install -y -qq lftp
-    - lftp -c "set ftp:ssl-allow no; open -u $FTP_USERNAME,$FTP_PASSWORD $FTP_HOSTNAME; mirror -Rev build/ ./public_html  --ignore-time --parallel=10 --exclude-glob .git* --exclude .git/"
+    - lftp -e "set ftp:ssl-allow no; open $FTP_HOSTNAME; user $FTP_USERNAME $FTP_PASSWORD; mirror -X .* -X .*/ --reverse --verbose --delete build/ ./public_html; bye"
